--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
   },
   "homepage": "https://github.com/davetii/media-metadata-sandbox#readme",
   "devDependencies": {
+    "calipers": "^2.0.1",
     "electron": "^7.1.10",
     "kickstart-node": "^3.0.75",
     "music-metadata": "^6.3.1"
+  },
+  "dependencies": {
+    "calipers-gif": "^2.0.0",
+    "calipers-jpeg": "^2.0.0",
+    "calipers-png": "^2.0.0",
+    "image-size": "^0.8.3"
   }
 }
